--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "workbench.editorAssociations": {
-    "*.md": "vscode.markdown.preview.editor"
+    "*.md": "vscode.markdown.preview.editor",
+    "*.jfif": "default"
   },
   "liveServer.settings.port": 5502,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
